--- a/texFiles/input_table.tex
+++ b/texFiles/input_table.tex
@@ -8,8 +8,8 @@ $M_{200c_{\mathrm{NW}}}$ & $10^{14} h_{70}^{-1}$ M$_{\odot}$ &13.0&1.6& \citetal
 c$_{\mathrm{NW}}$ &  & 2.50& 0.02& \citetalias{{Jee13}} \\ 
 $M_{200c_{\mathrm{SE}}}$ & $10^{14} h_{70}^{-1}$ M$_{\odot}$ &7.6&1.2 & \citetalias{Jee13}\\ 
 $c_{\mathrm{SE}}$ &  & 2.70 & 0.04& \citetalias{Jee13}\\ 
-$z_{\mathrm{NW}}$ &  & 0.86842 & 0.00109& \citetalias{M12}, \citetalias{Sifon13}\\ 
-$z_{\mathrm{SE}}$ &  & 0.87110 & 0.00117& \citetalias{M12}, \citetalias{Sifon13}\\ 
+$z_{\mathrm{NW}}$ &  & 0.86842 & 0.00109& \citetalias{M12}\\ 
+$z_{\mathrm{SE}}$ &  & 0.87110 & 0.00117& \citetalias{M12}\\ 
 d$_{\mathrm{proj}}$ & Mpc & 0.74 &0.007 & \citetalias{Jee13} \\ 
 \hline 
 \end{tabular} 
