--- a/texFiles/output_table.tex
+++ b/texFiles/output_table.tex
@@ -5,20 +5,20 @@
 \begin{tabularx}{\textwidth}{@{\extracolsep{\fill}}lccccccccc@{}}
 \hline
 \hline
-&&&&Default weights & & & & Default + polarization weights  \\ 
+&&&&Default priors & & & & Default + polarization priors  \\ 
 \cmidrule{4-6} \cmidrule{8-10} 
 Variables & Units && Location & 68$\%$ CI $^{\dagger}$ &95$\%$ CI && Location & 68$\%$ CI  & 95$\%$ CI \\ 
 \hline 
 $\alpha$ &(degree)&&43&19-69&6-80&&21&10-30&3-34\\
-%$d_{proj}$ &Mpc&&0.74&0.74-0.75&0.73-0.76&&0.74&0.74-0.75&0.73-0.76\\
-$d_{max}$ &Mpc&&1.2&0.9-2.2&0.77-4.6&&0.93&0.81-1.2&0.75-1.9\\
-$d_{3D}$ &Mpc&&1&0.79-2.1&0.75-4.3&&0.8&0.76-0.88&0.74-0.91\\
-$TSC_0$&Gyr&&0.61&0.4-0.95&0.26-2.4&&0.46&0.3-0.55&0.21-0.64\\
-$TSC_1$&Gyr&&1&0.77-1.7&0.63-4.4&&0.91&0.69-1.3&0.59-2.3\\
-$T$&Gyr&&1.6&1.3-2.6&1.2-7.1&&1.4&1.2-1.6&1.2-2.4\\
-$v_{3D}(t_{obs})$ & \kilo \meter~\second$^{-1}$ &&580&260-1200&59-2400&&940&360-1800&62-2900\\
-$v_{rad}(t_{obs})$ & \kilo \meter~\second$^{-1}$ &&360&140-630&27-880&&310&110-590&8-840\\
-$v_{3D}(t_{col})$ & \kilo \meter~\second$^{-1}$ &&2800&2400-3700&2100-4200&&2400&2200-2800&2100-3500\\
+$d_{\rm proj}$ &Mpc&&0.74&0.74-0.75&0.73-0.76&&0.74&0.74-0.75&0.73-0.76\\
+$d_{\rm max}$ &Mpc&&1.2&0.9-2.2&0.77-4.6&&0.93&0.81-1.2&0.75-1.9\\
+$d_{\rm 3D}$ &Mpc&&1&0.79-2.1&0.75-4.3&&0.8&0.76-0.88&0.74-0.91\\
+$TSC_{\rm out}$&Gyr&&0.61&0.4-0.95&0.26-2.4&&0.46&0.3-0.55&0.21-0.64\\
+$TSC_{\rm ret}$&Gyr&&1&0.77-1.7&0.63-4.4&&0.91&0.69-1.3&0.59-2.3\\
+$T$&Gyr&&1.6&1.3-2.4&1.2-6.4&&1.4&1.2-1.6&1.2-2.2\\
+$v_{\rm 3D}(t_{\rm obs})$ & \kilo \meter~\second$^{-1}$ &&580&260-1200&59-2400&&940&360-1800&62-2900\\
+$v_{\rm rad}(t_{\rm obs})$ & \kilo \meter~\second$^{-1}$ &&360&140-630&27-880&&310&110-590&8-840\\
+$v_{\rm 3D}(t_{\rm col})$ & \kilo \meter~\second$^{-1}$ &&2800&2400-3700&2100-4200&&2400&2200-2800&2100-3500\\
 \bottomrule
 \end{tabularx}\\
 \footnotesize{$\dagger$ CI stands for confidence interval}\\
