draft after incorporating Dave"s latest comments

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -50,7 +50,7 @@ the time-since-collision into context by showing that if the time-averaged
 shock velocity is approximately equal to or smaller than the collisional velocity of the
 corresponding subcluster in the 
 center of mass frame, the two subclusters are more likely to be moving towards, rather
-than away, from each other, after the apocenter. 
+than away, from each other, post apocenter. 
 We compare and contrast the merger scenario of El Gordo with that of the Bullet
 Cluster, and show that this late-stage merging scenario 
 explains why the southeast dark matter lensing peak of El Gordo is
@@ -79,12 +79,11 @@ momentum through electromagnetic interactions. On the other hand, offsets
 between dark matter and galaxies may suggest dark matter self-interaction
 (\citealt{Kahlhoefer14}, \citealt{Randall2008d}).  
 \par
-The galaxy cluster ACT-CL J0102-4915, (nicknamed "El Gordo," at z=0.87),
-was discovered via its Sunyaev-Zel'dovich effect by the Atacama Cosmology Telescope (ACT;
+The galaxy cluster ACT-CL J0102-4915, (nicknamed ``El Gordo", at z=0.87),
+was discovered via its Sunyaev-Zel'dovich (SZ) effect by the Atacama Cosmology Telescope (ACT;
 \citealt{Menanteau2010}; \citealt{Marriage11}); it has the strongest SZ
 effect of the full ACT survey \citep{Hasselfield2013}, and was discovered
-to be undergoing a major merger approximately on the plane of the sky (\citealt{M12}, hereafter M12). El Gordo possesses a range of noteworthy features that allow us to constrain the merger dynamics in multiple ways. Ever since its discovery, there has been an ongoing effort for
-collecting comprehensive data for El Gordo.
+to be undergoing a major merger approximately in the plane of the sky (\citealt{M12}, hereafter M12). El Gordo possesses a range of noteworthy features that allow us to constrain the merger dynamics in multiple ways. 
 From the spectroscopy and Dressler-Schectman test for the member galaxies
 in \cite{Sifon13}, it is shown that El Gordo does not have complicated
 substructures. 
@@ -96,9 +95,9 @@ according to their location as the northwest (NW) and southeast (SE) subclusters
 El Gordo also has an interesting X-ray morphology. In the northwest, it shows a wake feature, i.e.,
 turbulent flow due to object of higher density moving through fluids, while
 in the southeast, it shows the highest X-ray emissivity indicative of a
-cool gas core southeast of the wake. The most straightforward explanation for this morphology is that the
+cool gas core at the head of the wake. The most straightforward explanation for this morphology is that the
 cool gas core has passed from the northwest to the southeast
-to have caused this morphology \citep{M12}. 
+\citep{M12}. 
 The high mass of El Gordo also makes it a good
 gravitational lens. \cite{Zitrin13} have found multiple strong
 gravitationally lensed images around the center region of El Gordo. 
@@ -119,7 +118,7 @@ created from the merger \citep{L13}.
 		southeast radio relic (SE relic) \citep{L13}.
 		\label{fig:config}}
 \end{figure}
-El Gordo is one of $\sim 50$ of galaxy clusters ($\sim50$) that have
+El Gordo is one of $\sim 50$ galaxy clusters that have
 been associated with a radio relic and show dissociation between the X-ray
 gas and the DM subclusters. \par 
 In this paper, we combined most of the available information of El Gordo
@@ -144,7 +143,7 @@ $\alpha$ should be small.
 For mergers with a
 large projection angle, the radio emission would be projected towards the
 center of the merger, which inhibits detection \citep{Vazza11}.
-However, the only quantitative constraints on $\alpha$ for El Gordo is from
+However, the only quantitative constraint on $\alpha$ for El Gordo is from
 the analysis of the radio relic from \cite{L13} with a lower bound of $\alpha \geq 11.6 \degree$. A tighter
 constraint on $\alpha$ is needed for us to reduce uncertainty of the
 dynamical variables. 
@@ -157,7 +156,7 @@ This work based on Monte Carlo simulation is particularly important since
 the phase space of possible merger scenarios is large. Previous attempts at modeling El Gordo with hydrodynamical
 simulations such as \cite{Donnert13} and \cite{Molnar14} provided only in
 total a dozen possible configurations of El Gordo, which do not
-reflect the input uncertainties. Another approach for
+reflect the range of input uncertainties. Another approach for
 estimating dynamical parameters would be to look for multiple analogs of El Gordo in cosmological
 simulations.  However, under the hierarchical picture
 of structure formation in the $\Lambda$CDM model, there is a rare chance
@@ -198,7 +197,7 @@ resolution radio observations conducted by \cite{L13} at 610 \mega Hz and
 2.1 \giga Hz later confirmed the identities of the NW and the SE relic, and
 found another extended source of radio relic in the east (E) (See Fig.~\ref{fig:config}). Among the radio relics, the NW relic possesses the most extended geometry
 (0.56 Mpc in length), and its physics, including the
-polarization and Mach number were studied in the greatest detail. Such
+polarization and Mach number, were studied in the greatest detail. Such
 information allows us to constrain $\alpha$ and the merger scenario. The E relic
 was also reported to have a resolved length of 0.27 Mpc, while the SE relic
 was found to overlap with a point source \citep{L13}. Both the E and SE
@@ -208,8 +207,7 @@ originate from the same merger shock in the following work.
 \section{METHOD -- Monte Carlo simulation} 
 We used the collisionless 
 dark-matter-only Monte Carlo modeling code written by \citetalias{D13}, to
-model the DM subclusters, to find out the dynamics between the first and
-the second core-passage of the subclusters. 
+model the dynamics of the DM subclusters of their first core-passage.
 In the D13 code, the time evolution of the
 head-on merger was computed based on an analytical, dissipationless model
 assuming that the only dominant force is the gravitational attraction from
@@ -263,8 +261,8 @@ The system of El Gordo satisfies several major assumptions in the Monte Carlo
 simulation. One of the strongest assumptions is that all realizations correspond to
 gravitationally bound systems. The simulation excludes all realizations
 that would result in relative collisional velocities of the subclusters
-higher than the free-fall velocity. We justify our assumption of only
-modeling gravitationally bound system by noting that the relative escape
+higher than the free-fall velocity. We justify our assumption of
+modeling only gravitationally bound systems by noting that the relative escape
 velocity of the subclusters for El Gordo is
 $4500~\kilo\meter~\second^{-1}$ (based on the mass estimates of
 \cite{Jee13}). 
@@ -276,21 +274,21 @@ Other major assumptions for
 modeling systems with this code include negligible impact parameter.
 Several papers have noted that the X-ray morphology of a bimodal merger is
 sensitive to the impact parameter (\citealt{Springel2007},
-\citealt{Ricker98}, \citealt{Mastropietro2008a}), an impact
+\citealt{Ricker98}, \citealt{Mastropietro2008a}); an impact
 parameter as small as 0.1 Mpc can result in substantial asymmetry. 
 The X-ray morphology of El Gordo is approximately symmetric about the merger axis. 
 On the other hand, the dynamics of the merger is not as sensitive to the
-impact parameter. The simulations of \cite{Ricker98} of bimodal mergers of dark matter
-component with $10^{15} M_{\sun}$ each, showed that the resulting relative
-velocity would be approximately at $2000 \text{ km s}^{-1}$ even if they vary the
-impact parameter between 0 to 5 times the scale radius ($5~r_s = 3.5$ Mpc). \cite{Mastropietro2008a} also reported that
+impact parameter as the X-ray morphology. The simulations of
+\cite{Ricker98} of bimodal mergers of $10^{15} M_{\sun}$ halos, showed that the resulting relative
+velocity would be approximately $2000 \text{ km s}^{-1}$, relatively
+insensitive to impact parameters between 0 to 5 times the scale radius ($5~r_s = 3.5$ Mpc). \cite{Mastropietro2008a} also reported that
 an impact parameter of $0.1~r_{200} = 0.14$ Mpc affected merger dynamics only at the $\sim$10\% level.   
 \citealt{Molnar14} indicated that the impact parameter of El Gordo
 may be as large as $40\%~r_s \approx 0.3$ Mpc, where $r_s$ is
-the corresponding characterisic core
-radius of the NFW halo with the mass of the SE subcluster. We consider
-the result from \citealt{Molnar14} may be due to incomplete exploration of
-the parameter space, and that other impact parameter values may also match the
+the corresponding characteristic core
+radius of the NFW halo with the mass of the SE subcluster. We attribute
+the result from \citealt{Molnar14} to incomplete exploration of
+the parameter space, and note that other impact parameter values may also match the
 X-ray observables of El Gordo.
 %% scale radius according to me seems to be ~.7 Mpc 
 %% r200C = 1.4 Mpc  
@@ -324,8 +322,8 @@ We adopted the identification of galaxy membership of El Gordo given by
 The adopted spatial cut is approximately perpendicular to the 2D merger
 axis \citepalias{M12} and is consistent with
 the bimodal number density contours (See Figure~\ref{fig:membership}). 
-There are 51 members identified in the NW subclusters and 35 members in the SE
-subclusters. 
+There are 51 members identified in the NW subcluster and 35 members in the SE
+subcluster. 
 After identifying members of each subcluster, we performed 10, 000 bootstrap realizations to estimate the biweight
 locations of the spectroscopic redshifts of the respective members in order
 to obtain the samples of the PDFs of the redshifts of each subcluster. 
@@ -359,7 +357,9 @@ $476~\pm~242~\kilo\meter~\second^{-1}$ (See Fig. \ref{fig:
 bootstrap_redshift}). 
 The radial velocity difference of $586~\kilo \meter~\second^{-1}$ reported by \citetalias{M12} 
 is higher than our estimates but within the 68\% bias-corrected
-confidence interval. 
+confidence interval.\footnote{bias from the location estimator of
+	the bootstrapped distribution not giving the maximum likelihood value was
+corrected for.} 
 %Limitations and possible improvements of this analysis
 %of $v_{rad}$ are provided in the discussion. 
 \begin{figure}
@@ -403,7 +403,7 @@ inferred centroid locations correspond to a mean projected separation
 We outline the outputs of the simulation here to facilitate the discussion
 of the design of the weights used in the simulation. The simulation
 provides PDF estimates for 8 output variables. Variables
-of the highest interest include the time dependence and the angle $\alpha$, which is
+of the highest interest include the time-since-pericenter and the angle $\alpha$, which is
 defined to be the projection angle between the plane of the sky and the
 merger axis. Other output variables are dependent on $\alpha$ and time. Specifically, the simulation denotes the time dependence by
 providing several characteristic time-scales, including the time
@@ -421,7 +421,8 @@ We describe how we make use of properties of the radio relic to evaluate
 which scenario is more likely in
 section~\ref{sec:positionprior}. Evolution of the merger after the second
 passage is not considered. Outputs from our dissipationless simulation for
-a ``second'' passage will not differ from the first passage.
+a ``second'' passage will not differ from the first passage, and the
+predicted relic position would be so far for us to rule this out.
  
 The simulation also outputs estimates of variables that describe
 the dynamics and the characteristic distances of the merger. The relative
@@ -435,7 +436,7 @@ the apocenter and the 3D separation of the subclusters at observation
 \subsection{Design and application of weights} 
 \label{sec:priors}
 %\input{2.3_prior}
-One of the biggest strengths of the Monte Carlo simulation by
+One of the strengths of the Monte Carlo simulation by
 \citetalias{D13} is its ability to detect and rule out extreme input values that would result in
 unphysical realizations via the application of weights. 
 Our default weights are described in D13 and we include them in
@@ -454,10 +455,11 @@ The observed radio relic was generated by synchrotron emission of free electrons
 magnetic field. If the magnetic field was uniform, the observed
 polarization fraction of the synchrotron emission of the electrons depends on the
 viewing angle (or equivalently the projection angle) with respect to the
-alignment of the magnetic field. Synchrotron emission from electrons inside unorganized magnetic field are
+alignment of the magnetic field. Synchrotron emission from electrons inside
+unorganized magnetic field is
 randomly polarized. The high reported integrated polarization fraction from
 \citet{L13} can be explained by a highly aligned magnetic field,
-compressing the ICM during a merger
+compressed along with the ICM during a merger
 (\citealt{E98}, \citealt{vanWeeren10}, \citealt{Feretti12}).
 %This picture is consistent with a high polarization fraction.
 \par
@@ -528,7 +530,7 @@ information from the polarization fraction of the radio relic as:
 \begin{equation}
 w(\alpha) = 
 	\begin{cases}
-	& \text{1 / 35 for  }\alpha < 35 \degree \\ 
+	& \text{const. for  }\alpha < 35 \degree \\ 
 	& 0 \text{ otherwise,}\label{eqn:polarprior}.
 	\end{cases}
 \end{equation}
@@ -558,7 +560,7 @@ To capture the monotonically decreasing trend of the
 propagation speed of the shock fronts with respect to the center of
 mass, we expressed the possible shock speeds as a factor of the inferred
 collisional speed of the corresponding subcluster in the center of mass
-(momentum) frame. 
+ frame. 
 Then we calculated how far the shock would have propagated for our inferred
 $TSC_{\rm out}$ and $TSC_{\rm ret}$ values. We worked in the center of mass frame where the
 shock speed is expected to drop slightly with TSC. 
@@ -597,9 +599,9 @@ shock is driven by the merger. We note that the propagation speed of the
 shock is also determined by the temperature, density and other details of
 the gas medium (\citealt{Prokhorov2007}, \citealt{Springel2007},
 \citealt{Milosavljevic07}), so it is physically possible for the shock to
-propagate with $\beta > 1$. Examples of
-merging clusters with $\beta \approx 1.5$ is reported by cosmological
-simulations \citep{Paul2011b}. \par 
+propagate with $\beta > 1$. An example of
+merging clusters with $\beta \approx 2.0$ has been reported by cosmological
+simulations (merger F) with a time resolution of 0.6 Gyr \citep{Paul2011b}. \par 
 However, we note that merger shocks from cosmological
 simulations are reported to show low Mach numbers between 1 and 3
 \citep{Bruggen2011}, with an even tighter upper limit on the Mach number of
@@ -624,36 +626,29 @@ results only applying the default weights on the left hand side of the table
 and those also applied with the polarization weight on the right hand side.
 Furthermore, we include the plots of all the marginalized PDFs with the
 polarization weight in Appendix~\ref{app:results}. \par 
-Our estimates of $v_{3D}(t_{col}) = 2400\pm^{900}_{400}~\kilo\meter~\second^{-1}$ 
+Our estimates of $v_{3D}(t_{obs}) = 940\pm^{860}_{580}~\kilo\meter~\second^{-1}$ 
 at the time of collision is compatible with the independent estimate from \citealt{L13}. 
 By making use of the Mach number of the NW radio relic, \cite{L13}
-reported an estimate of the upper bound of the relative collisional
+reported an estimate of the upper bound of the relative observed
 velocity to be $2500
 \pm^{400}_{300}\kilo\meter~\second^{-1}$. 
 From the simulation of the Bullet Cluster, Springel \& Farrar (2007) showed
-that pre-shock gas could travel at as high as $\sim
-1100~\kilo\meter~\second^{-1}$ from the outer edge of the subclusters to
+that pre-shock gas could travel at as high as $\sim1100~\kilo\meter~\second^{-1}$ from the outer edge of the subclusters to
 the merger center.  It is therefore reasonable to assume the reported speed
-from \cite{L13} to be an estimate of the {\it relative collisional speed
-between the subclusters}, instead of the collision speed of the NW
+from \cite{L13} to be an estimate of the upper bound of the observed speed of the NW
 subcluster {\it relative to the center-of-mass}.
-The magnitude of the relative $v_{3D}$ of the subclusters dropped as the
-subclusters climbed out of their mutual gravitational potential, and
-reduced to $v_{3D}(t_{obs}) = 940 \pm ^{860}_{580}~\kilo\meter~\second^{-1}$ at
-the time of observation.\par 
-%The projection angle of the El Gordo is estimated to be
-%$21\degree \pm^{13}_{17}$. Without the polarization priors, the Monte Carlo
-%simulation gives the estimate of the projection angle as $43\degree^{26}_{24}$.
-%Many previous studies (van Weeren et al. CITATIONS) have
-%suggested that $\alpha$ should be small for the detection of double radio
-%relics to be possible but did not provide quantitative constraints.    
+%The magnitude of the relative $v_{3D}$ of the subclusters dropped as the
+%subclusters climbed out of their mutual gravitational potential, and
+%reduced to $v_{3D}(t_{obs}) = 940 \pm ^{860}_{580}~\kilo\meter~\second^{-1}$ at
+%the time of observation.
+\par 
 
 \subsection{Time-since-collision (TSC) and the merger scenario}
 The simulation gives two estimates for
 the time-since-collision, with $TSC_{\rm out} = 0.46\pm^{0.09}_{0.16}~\giga \text{yr}$
 and $TSC_{\rm ret} =0.91\pm^{0.39}_{0.22}~\giga\text{yr}$ for the returning model. Both the estimates of
 $TSC_{\rm out}$ and $TSC_{\rm ret}$ are compatible with the physical time-scales of observable
-features of El Gordo. Both estimates are lower than the approximate
+features of El Gordo. Both estimates fit within the approximate
 observable time-scale of the wake feature in the X-ray, i.e.\ the sound
 crossing time of $\sim2~\giga$yr. The observable time scale of the radio
 relics is also on the scale of $\sim1~\giga$yr.\par 
@@ -669,7 +664,7 @@ $\langle v_{NW relic} \rangle < 1000~\kilo\meter~\second^{-1}$ and $\langle
 v_{SE relic} \rangle < 1800~\kilo\meter~\second^{-1}$ in the center of
 mass frame. For comparison, we found that an extreme, and unlikely
 range of $\beta > 1.5$ would be needed for the outgoing scenario($M_{out}$) to be
-preferred. (See appendix~\ref{app:Bayes_factor} for plots of the range
+preferred. (See Appendix~\ref{app:Bayes_factor} for plots of the range
 of $\beta$ that we examined). We marginalized $\beta$ to compute the
 probability of the simulated relic location being compatible with the
 observed location $P(S_{proj} \cap S_{obs}| M)$. We then computed   
@@ -712,7 +707,9 @@ radio relics, such as shown in \citet{Stroe14}. \par
 	\includegraphics[width=\linewidth]{our_guess_SE.png}
 	\caption{Comparison of the PDFs of the observed position of the SE relic (red bar
 	includes the 95\% confidence interval of location of the radio relic in
-the center of mass frame).}
+the center of mass frame). We made use of the polarization weight for
+producing this figure. 
+}
 	\label{fig:our_guessed_scenario1}
 \end{figure}
 \begin{figure}
@@ -764,7 +761,7 @@ which is larger than the upper 95\% CI of the mass that we used based on
 the weak lensing estimate.
 Furthermore, \cite{Molnar14} initialized the relative infall velocity
 (velocity when the separation of subclusters equals the sum of the two virial
-radii) to be $> 2250~\kilo \meter~ \second^{-1}$. This corresponds to
+radii) to be $2250~\kilo \meter~ \second^{-1}$. This corresponds to
 $v_{3D}(t_{col}) \gtrsim 4700~\kilo \meter~\second^{-1}$, which is close to
 the escape velocity of the subclusters. From our simulation, there is a
 negligible number of realizations with $v_{3D}(t_{col}) >
@@ -849,7 +846,7 @@ invalid) while the Bullet Cluster is in the outgoing phase, the differences
 in the observables of El Gordo and the Bullet Cluster can be explained.\par
 First, the merger shock front of the Bullet Cluster is
 observed only in the X-ray, but not via the radio relic, meaning that the shock may not have the
-time to propagate to the outskirt of the cluster (\citealt{Bruggen2011},
+time to propagate to the outskirts of the cluster (\citealt{Bruggen2011},
 \citealt{Markevitch2007}), and this bow shock is indeed observed to closely
 lead the corresponding less massive subcluster by $\sim 0.08~\mega$pc,
 assuming they are propagating outward. On the other hand, indirect
@@ -859,7 +856,7 @@ the cool core ($\sim 0.4~\mega$pc). \par
 %(Should discuss the Mach number,
 %the speed of sounds in each cluster, and the DM velocities)  
 Second, for the Bullet Cluster, the cool core (or the bullet) is closer to the
-interior of the cluster than the corresponding less massive DM subcluster mass
+interior of the system than the corresponding less massive DM subcluster mass
 peak, whereas the cool core of El Gordo is further offset from the center of
 mass than the corresponding SE subcluster (See Fig.~\ref{fig:config} for
 the observed positions). 
@@ -880,7 +877,7 @@ contradictory to the returning scenario. However, from our proposed merger
 scenario of El Gordo in Figure \ref{fig:merger_scenario},
 it is possible that the cool core and the DM are observed to be moving in
 opposite directions, with the DM subcluster started returning for a second core-passage. If the returning scenario is true, El Gordo would be one of the first
-clusters to be observed at a returning phase of the merger, after another
+clusters shown to be observed at a returning phase of the merger, after another
 bimodal cluster merger A168 with a cool front leading the corresponding DM
 subcluster \citep{Hallman04}.
 
@@ -917,17 +914,16 @@ required to investigate how to best characterize the spatial distribution
 of the galaxies. One pending question is to investigate if the luminosity
 density peak or number density peaks would better represent the galaxy
 distributions. The galaxy number density map of El Gordo
-\citepalias{Jee13} shows noteworthy $\sim0.2~\mega$pc offset between the SE
+\citepalias{Jee13} shows a noteworthy $\sim0.2~\mega$pc offset between the SE
 galaxy number density peak and the SE DM centroid, while there is almost no offset
 between the corresponding luminosity peak and DM centroid. The discrepancy
-between the number density peak and the luminosity peak is due to a much
-brighter brightest-cluster-galaxy (BCG) located close to the corresponding DM peak.
-Before there is a
-conclusion about how the galaxy-DM offset would vary over
-the different phases of the merger, 
-more understanding is required both of the late stages of mergers and of the behavior of galaxy number and luminosity densities in these mergers.
-
-
+between the number density peak and the luminosity peak is due to a very
+bright brightest-cluster-galaxy (BCG) located close to the corresponding DM peak.
+BCGS tend to mark the bottom of the potential, so this further supports the
+ram-pressure slingshot scenario outlined here. At the same time, this
+illustrates the need for further understanding of the behavior of the
+galaxy number and luminosity densities in dynamic situations before
+galaxy-DM offsets can be used to infer DM properties. 
 \par 
 \subsection{Improving constraints of merger scenario using prior knowledge from simulations}
 This work has allowed us to examine
@@ -952,8 +948,8 @@ core-passage time-scales?
 \item How would the galaxy-DM offset evolve if we were to add that information
 	to Fig. \ref{fig:merger_scenario}?
 \end{itemize}
-We urge simulators to help come up with answers that would be directly
-comparable with data to the questions above.  
+We urge simulators to narrow the gap between simulations and data by
+investigating these issues.
 \section{SUMMARY} 
 We provide estimates of the dynamical parameters of El Gordo using Dawson's
 Monte Carlo simulation, in particular, we 
@@ -963,11 +959,11 @@ Monte Carlo simulation, in particular, we
 		$43\degree \pm ^{26}_{24}$ to $21 \degree \pm^{9}_{11}$ (See
 		Fig.~\ref{fig:geom_geom}). By performing sensitivity analysis, we
 		showed that this weighting function helps reduce uncertainty for the dynamical
-		variables without changing the estimates drastically ($< 20\%$).\\ 
+		variables without changing the dynamical variable estimates drastically ($< 20\%$).\\ 
 	\item inferred the {\it relative} collisional velocity 
 		between the subclusters of El Gordo as 
 		$2400\pm^{400}_{200}~\kilo\meter~\second^{-1}$  
-		at the time of pericenter.
+		at the time of pericenter.\\
 	\item showed that a returning scenario is favored if $\langle v_{NW relic}\rangle \leq
 		1000~\kilo
 		\meter~\second^{-1}$ and $\langle v_{SE relic}\rangle \leq
